RESOLVED FIXED58482
Switched DOM wrappers to use HashMap of Weak<T> instead of WeakGCMap<T>
https://bugs.webkit.org/show_bug.cgi?id=58482
Summary Switched DOM wrappers to use HashMap of Weak<T> instead of WeakGCMap<T>
Geoffrey Garen
Reported 2011-04-13 14:39:14 PDT
Switched DOM wrappers to use HashMap of Weak<T> instead of WeakGCMap<T>
Attachments
Patch (20.93 KB, patch)
2011-04-13 14:47 PDT, Geoffrey Garen
oliver: review+
Geoffrey Garen
Comment 1 2011-04-13 14:47:04 PDT
Oliver Hunt
Comment 2 2011-04-13 15:12:23 PDT
Comment on attachment 89465 [details] Patch r=me assuming perf doesn't get impacted
Geoffrey Garen
Comment 3 2011-04-13 15:15:33 PDT
Note You need to log in before you can comment on or make changes to this bug.